add systemspec to favorite

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - chrome
   chrome:
     image: selenium/standalone-chrome:latest
+    shm_size: 256m
     ports:
       - 4444:4444
     tty: true
