--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,12 @@ version: '3'
 
 services:
   db:
+    restart: always
     image: mysql:5.7
     environment:
-      MYSQL_DATABASE: sharemusic_development
-      MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: root
     ports:
-      - "3306:3306"
-    volumes:
-      - ./db/mysql/volumes:/var/lib/mysql
+      - 4306:3306
 
   web:
     build: .
