--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,8 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  pool: 5
+  pool: 
+  port: 3306
   username: <%= ENV['MYSQL_USERNAME'] %>
   password: <%= ENV['MYSQL_PASSWORD'] %>
   host: db
