--- a/config/storage.yml
+++ b/config/storage.yml
@@ -10,8 +10,8 @@ amazon:
   service: S3
   access_key_id:     <%= ENV['S3_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['S3_SECRET_ACCESS_KEY'] %>
-  region:            <%= ENV['AWS_REGION'] %>
-  bucket:            <%= ENV['S3_BUCKET_NAME'] %>
+  region:            "ap-northeast-1"
+  bucket:            "s3-sharemusic"
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
