--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,27 @@ services:
       - 3306:3306
 
   web:
+    container_name: sharemusic_web_prod
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    environment:
+      RAILS_ENV: production
+    command: bundle exec puma -C config/puma.rb
     volumes:
-      - .:/sharemusic
-      - gem_data:/usr/local/bundle
+      - .:/myapp
+      - ./public:/myapp/public
+      - ./tmp:/myapp/tmp
+      - ./log:/myapp/log
     ports:
       - 3000:3000
-    stdin_open: true 
+
+  nginx:
+    image: nginx
+    volumes:
+       - ./public:/usr/share/nginx/html
+    ports:
+      - 8080:80
     depends_on:
-      - db 
-      - chrome
+      - web
       
   chrome:
     image: selenium/standalone-chrome:latest
