--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,27 +10,14 @@ services:
       - 3306:3306
 
   web:
-    container_name: sharemusic_web_prod
     build: .
-    environment:
-      RAILS_ENV: production
-    command: bundle exec puma -C config/puma.rb
+    image: web_singlecontainer
     volumes:
-      - .:/myapp
-      - ./public:/myapp/public
-      - ./tmp:/myapp/tmp
-      - ./log:/myapp/log
+      - /app/log # persists log
     ports:
-      - 3000:3000
-
-  nginx:
-    image: nginx
-    volumes:
-       - ./public:/usr/share/nginx/html
-    ports:
-      - 8080:80
+      - "80:80"
     depends_on:
-      - web
+      - db
       
   chrome:
     image: selenium/standalone-chrome:latest
