--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
     - run:
         name: install dependencies
         command: |
-          gem install bundler -v 
+          gem install bundler -v 1.17.3
           bundle install --jobs=4 --retry=3 --path vendor/bundle
 
     - save_cache:
@@ -39,7 +39,7 @@ jobs:
     # Database setup
     - run:
         name: Databasesetup
-        command: 1.17.3
+        command: |
            bundle exec rake db:create
            bundle exec rake db:schema:load
 
