--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,8 @@ jobs:
         name: Run rspec
         command: |
           mkdir /tmp/test-results
-          TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
-            circleci tests split --split-by=timings)"
 
-          docker-compose exec web rspec \
+          bundle exec rspec \
             --format progress \
             --format RspecJunitFormatter \
             --out /tmp/test-results/rspec.xml \
