--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
       environment:
         - BUNDLER_VERSION: 1.7.3
         - RAILS_ENV: 'test'
+        - MYSQL_USERNAME: 'root'
+        - MYSQL_PASSWORD: 'password'
     - image: circleci/mysql:5.7
       environment:
         - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
