--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
             circleci tests split --split-by=timings)"
 
-           bundle exec rspec \
+          docker-compose run web rspec \
             --format progress \
             --format RspecJunitFormatter \
             --out /tmp/test-results/rspec.xml \
