--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,17 +50,7 @@ jobs:
     # run tests!
     - run:
         name: Run rspec
-        command: |
-          mkdir /tmp/test-results
-          TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
-            circleci tests split --split-by=timings)"
-
-          docker-compose exec web rspec \
-            --format progress \
-            --format RspecJunitFormatter \
-            --out /tmp/test-results/rspec.xml \
-            --format progress \
-            $TEST_FILES
+        command: docker-compose exec web rspec
 
     # collect reports
     - store_test_results:
