--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
       environment:
         - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
         - MYSQL_ROOT_HOST: '127.0.0.1'
+      command: --default-authentication-plugin=mysql_native_password
+    - image: selenium/standalone-chrome-debug:latest
+      name: chrome
 
     working_directory: ~/sharemusic 
 
