--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,17 +35,14 @@ jobs:
         - ./vendor/bundle
         key: v1-dependencies-{{ checksum "Gemfile.lock" }}
 
-    # Database setup
     - run: mv ./config/database.yml.ci ./config/database.yml
 
-    # Database setup
     - run:
         name: Databasesetup
         command: |
            bundle exec rake db:create
            bundle exec rake db:schema:load
 
-    # run tests!
     - run:
         name: Run rspec
         command: |
@@ -60,9 +57,50 @@ jobs:
             --format progress \
             $TEST_FILES
 
-    # collect reports
     - store_test_results:
         path: /tmp/test-results
     - store_artifacts:
         path: /tmp/test-results
         destination: test-results
+
+    - run:    
+        name: Rubocop
+        command: bundle exec rubocop
+
+  deploy:
+    docker:
+      - image: circleci/ruby:2.5.8-node&nbsp;
+    working_directory: /tmp/repo
+    steps:
+      - checkout
+      - run:
+          name: 'Install Heroku CLI, if necessary'
+          command: |
+            if [[ $(command -v heroku) == "" ]]; then
+              curl https://cli-assets.heroku.com/install.sh | sh
+            else
+              echo "Heroku is already installed. No operation was performed."
+            fi
+      - run:
+          name: heroku maintenance on
+          command: heroku maintenance:on --app ${HEROKU_APP_NAME}
+      - run:
+          name: Deploy to Heroku_Production
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+      - run:
+          name: heroku maintenance off
+          command: heroku maintenance:off --app ${HEROKU_APP_NAME}
+
+workflows:
+  version: 2.1
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
