--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,29 +68,11 @@ jobs:
         command: bundle exec rubocop
 
   deploy:
-    docker:
-      - image: circleci/ruby:2.5.8-node&nbsp;
-    working_directory: /tmp/repo
-    steps:
-      - checkout
-      - run:
-          name: 'Install Heroku CLI, if necessary'
-          command: |
-            if [[ $(command -v heroku) == "" ]]; then
-              curl https://cli-assets.heroku.com/install.sh | sh
-            else
-              echo "Heroku is already installed. No operation was performed."
-            fi
-      - run:
-          name: heroku maintenance on
-          command: heroku maintenance:on --sharemusic ${HEROKU_APP_NAME}
-      - run:
-          name: Deploy to Heroku_Production
-          command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
-      - run:
-          name: heroku maintenance off
-          command: heroku maintenance:off --sharemusic ${HEROKU_APP_NAME}
+    name: Deploy Master to Heroku
+    command: |
+      if [ "${CIRCLE_BRANCH}" == "master" ]; then
+        git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+      fi
 
 workflows:
   version: 2.1
