--- a/config/database.yml
+++ b/config/database.yml
@@ -18,3 +18,7 @@ test:
 production:
   <<: *default
   database: sharemusic_production
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: localhost
+  socket: /var/lib/mysql/mysql.sock
