--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,10 @@
 /node_modules
 /yarn-error.log
 
-/public/assets
+/public/uploads
 .byebug_history
 /config/master.key
 .DS_Store
 /db/mysql/
 /.env
 /db/mysql/
-/public
