--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ test:
 
 production:
   <<: *default
-  database: sharemusic_production
-  username: root
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  host: localhost
-  socket: /var/lib/mysql/mysql.sock
+  database: <%= ENV['DB_NAME'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
+  host: <%= ENV['DB_HOSTNAME'] %>
+
